<resources>
    <string name="app_name">HELPT</string>

    <string name="auth_set_greet1">안녕하세요, %s 님!</string>
    <string name="auth_set_greet2">회원님께 더 좋은 서비스를\n제공하기 위해 몇 가지 확인할 게 있어요</string>
    <string name="auth_set_sex">성별을 선택해주세요</string>
    <string name="auth_set_physic">키와 몸무게를 입력해주세요</string>
    <string name="auth_set_info">생년월일을 입력해주세요</string>


    <string name="home_greet">어서 오세요, %s님!\n오늘도 즐겁게 운동해볼까요?</string>
    <string name="home_greet_no">어서 오세요, %s님!\n헬스장을 찾아 회원권을 등록해보세요</string>
    <string name="home_gym_pay_title">%d개월 회원권</string>
    <string name="home_gym_pay_price">%,d원</string>
    <string name="home_gym_pay_mprice">월 %,d원</string>

    <string name="dialog_gym_name_detail">%s 상세보기</string>


    <string name="train_init_guide">사용할 운동 기기에 부착된\nQR코드를 찍어주세요</string>
    <string name="train_setting_set">%d 세트</string>
    <string name="train_setting_weight">%d kg</string>
    <string name="train_setting_count">%d 회</string>

    <string name="train_band_bent_over_row_name">밴드 벤트 오버 로우</string>
    <string name="train_band_bent_over_row_eng_name">Band Bent Over Row</string>
    <string name="train_guide_band_bent_over_row">&lt;b>시작 자세&lt;/b>
      &lt;br>&lt;/br>1. 다리는 어깨너비만큼 벌려주세요.

&lt;br>&lt;/br>2. 밴드를 잡고 가슴을 펴주세요.

&lt;br>&lt;/br>3. 무릎을 약간 굽힌 채로 상체를 숙여주세요.

        &lt;br>&lt;/br>&lt;br>&lt;/br>&lt;b>운동 동작&lt;/b>
&lt;br>&lt;/br>1. 밴드가 수직으로 올라갈 수 있게 배꼽 쪽으로 당겨주세요.

&lt;br>&lt;/br>2. 날개뼈를 모으면서 자연스럽게 팔꿈치와 손을 당겨주세요.

&lt;br>&lt;/br>3. 등의 힘으로 버티며 무릎 아래까지 손을 내려주세요.

        &lt;br>&lt;/br>&lt;br>&lt;/br>&lt;b>호흡법&lt;/b>
&lt;br>&lt;/br>팔을 당길 때 숨을 내쉬고, 팔을 펼 때 숨을 들이쉬세요.

&lt;br>&lt;/br>&lt;br>&lt;/br>&lt;b>주의사항&lt;/b>
&lt;br>&lt;/br>1. 팔꿈치가 벌어지지 않도록 주의해 주세요.

        &lt;br>&lt;/br>2. 허리가 너무 세워지거나 위아래로 움직이지 않도록 주의해 주세요.

&lt;br>&lt;/br>3. 허리가 말리지 않도록 코어에 힘을 주세요.</string>

    <string name="training_count">%1$d/%2$d회</string>
    <string name="train_done_result">%1$s\t\t%2$d세트\t\t%3$d회</string>
    <string name="train_done_percent">%s %</string>
    <string name="record_detail_title">%1$d월 %2$d일 나의 운동</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringMyPageTitle">마이 페이지</string>
    <string name="stringMyPageName2">...</string>
    <string name="stringMyPageName1">오늘도 득근득근!</string>
    <string name="stringMyPageName3">님</string>
    <string name="stringMyPageProfileName">프로필</string>
    <string name="stringMyPageProfileCalendarTitle">%1$d월 %2$d일</string>
    <string name="stringMyPageProfileCalendarTitle2">나의 운동</string>
    <string name="stringExerciseRecordSets">세트</string>
    <string name="stringExerciseRecordSetsValue">3</string>
    <string name="stringExerciseRecordReps">회</string>
    <string name="stringExerciseRecordRepsValue">10</string>
    <string name="stringExerciseRecordTime">00:00:00</string>
    <string name="stringProfileTitle">프로필 수정</string>
    <string name="stringProfileName">이름</string>
    <string name="stringProfileGender">성별</string>
    <string name="stringProfileHeight">키(cm)</string>
    <string name="stringProfileWeight">몸무게(kg)</string>
    <string name="stringProfileNameHint">이름을 작성하세요.</string>
    <string name="stringProfileChange">완료</string>
    <string name="stringProfileEditName">이름 수정</string>
    <string name="stringProfileEditHeight">키(cm) 수정</string>
    <string name="stringProfileHeightHint">키를 입력해주세요.</string>
    <string name="stringProfileEditWeight">몸무게(kg) 수정</string>
    <string name="stringProfileWeightHint">몸무게를 입력해주세요.</string>
    <string name="stringProfileEditGender">성별</string>
</resources>