<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mypage.MyPageFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <TextView
            android:id="@+id/textViewMyPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/stringMyPageTitle"
            android:textAppearance="@style/styleMyPageTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMyPageName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/stringMyPageName1"
            android:textAppearance="@style/styleMyPageName1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMyPageTitle" />

        <TextView
            android:id="@+id/textViewMyPageName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:text="@string/stringMyPageName2"
            android:textAppearance="@style/styleMyPageName2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMyPageName1" />

        <TextView
            android:id="@+id/textViewMyPageName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:text="@string/stringMyPageName3"
            android:textAppearance="@style/styleMyPageName2"
            app:layout_constraintStart_toEndOf="@id/textViewMyPageName2"
            app:layout_constraintTop_toBottomOf="@id/textViewMyPageName1" />

        <ImageView
            android:id="@+id/imageViewMyPageProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rectangle_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewMyPageTitle" />

        <ImageView
            android:id="@+id/imageViewMyPageProfileEllipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ellipse_profile"
            app:layout_constraintStart_toStartOf="@id/imageViewMyPageProfile"
            app:layout_constraintTop_toTopOf="@id/imageViewMyPageProfile"
            app:layout_constraintBottom_toBottomOf="@id/imageViewMyPageProfile" />

        <ImageView
            android:id="@+id/imageViewMyPageProfileUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_light"
            app:layout_constraintStart_toStartOf="@id/imageViewMyPageProfileEllipse"
            app:layout_constraintTop_toTopOf="@id/imageViewMyPageProfileEllipse"
            app:layout_constraintBottom_toBottomOf="@id/imageViewMyPageProfileEllipse"
            app:layout_constraintEnd_toEndOf="@id/imageViewMyPageProfileEllipse" />

        <TextView
            android:id="@+id/textViewMyPageProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/stringMyPageProfileName"
            android:textAppearance="@style/styleMyPageProfileName"
            app:layout_constraintBottom_toBottomOf="@id/imageViewMyPageProfile"
            app:layout_constraintEnd_toEndOf="@id/imageViewMyPageProfile"
            app:layout_constraintTop_toTopOf="@id/imageViewMyPageProfile" />

        <ImageView
            android:id="@+id/imageViewMyPageProfileCalendarBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/rectangle_profile_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewMyPageName2" />

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarViewMyPage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:mcv_selectionColor="#3BB9B6"
            app:mcv_showOtherDates="all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageViewMyPageProfileCalendarBackground" />

        <TextView
            android:id="@+id/textViewMyPageProfileCalendarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:text="@string/stringMyPageProfileCalendarTitle"
            android:textAppearance="@style/styleMyPageProfileCalendarTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendarViewMyPage" />

        <TextView
            android:id="@+id/textViewMyPageProfileCalendarTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:text="@string/stringMyPageProfileCalendarTitle2"
            android:textAppearance="@style/styleMyPageProfileCalendarTitle"
            app:layout_constraintStart_toEndOf="@id/textViewMyPageProfileCalendarTitle"
            app:layout_constraintTop_toBottomOf="@id/calendarViewMyPage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMyPageRecord"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="12dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewMyPageProfileCalendarTitle"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>