<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mypage.profile.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/all_back"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/stringProfileTitle"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="@+id/backBtn" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/all_line"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ScrollView
            android:id="@+id/profile_scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/login_logo"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringProfileName"
                    android:textAppearance="@style/styleProfileTV"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintTop_toBottomOf="@id/civ_profile_image"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/tv_name_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/stringProfileName"
                    android:paddingStart="12dp"
                    android:gravity="center|start"
                    android:textAppearance="@style/styleProfileET"
                    android:background="@drawable/rectangle_profile_edit_text_bg"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringProfileGender"
                    android:textAppearance="@style/styleProfileTV"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_content"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/tv_gender_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/stringProfileGender"
                    android:paddingStart="12dp"
                    android:gravity="center|start"
                    android:textAppearance="@style/styleProfileET"
                    android:background="@drawable/rectangle_profile_edit_text_bg"
                    app:layout_constraintTop_toBottomOf="@id/tv_gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringProfileHeight"
                    android:textAppearance="@style/styleProfileTV"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_gender_content"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/tv_height_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/stringProfileHeight"
                    android:paddingStart="12dp"
                    android:gravity="center|start"
                    android:textAppearance="@style/styleProfileET"
                    android:background="@drawable/rectangle_profile_edit_text_bg"
                    app:layout_constraintTop_toBottomOf="@id/tv_height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <ImageView
                    android:id="@+id/iv_edit_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/all_edit"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="@id/tv_height_content"
                    app:layout_constraintTop_toTopOf="@id/tv_height_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_height_content"/>
                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringProfileWeight"
                    android:textAppearance="@style/styleProfileTV"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_height_content"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/tv_weight_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/stringProfileWeight"
                    android:paddingStart="12dp"
                    android:gravity="center|start"
                    android:textAppearance="@style/styleProfileET"
                    android:background="@drawable/rectangle_profile_edit_text_bg"
                    app:layout_constraintTop_toBottomOf="@id/tv_weight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <ImageView
                    android:id="@+id/iv_edit_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/all_edit"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="@id/tv_weight_content"
                    app:layout_constraintTop_toTopOf="@id/tv_weight_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_weight_content"/>



                <TextView
                    android:id="@+id/btn_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"

                    android:text="@string/stringProfileChange"
                    android:gravity="center"
                    android:textAppearance="@style/styleProfileChangeBtn"
                    android:background="@drawable/all_long_btn"
                    app:layout_constraintTop_toBottomOf="@id/tv_weight_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>